<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Programs" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10sp"
                android:text="Program Details for School Students"
                android:textColor="#C52318"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10sp"
                android:fontFamily="@font/roboto"
                android:text="Ensure Optimizer Course: 12 months Engagement"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/school12month" />

            <TextView
                android:id="@+id/objective_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20sp"
                android:fontFamily="sans-serif-black"
                android:text="This annual program is designed to focus on the areas in a student's career for optimization of performance in the immediate future through scientific analysis."
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_1"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_3"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_4"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_5"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_6"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_7"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_8"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_9"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_10"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_obj11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                card_view:cardBackgroundColor="#F1F9FA"
                card_view:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/obj11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/school_1_year_11"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_student_12month"
                style="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/oval"
                android:fontFamily="sans-serif"
                android:padding="12dp"
                android:text="Pay for 1 year"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>